Add ci job to run code checks

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,3 +10,13 @@ jobs:
           jvm: zulu:18.0.1
           scala-cli-version: 0.1.5
       - run: ./run-tests.sh
+  run-code-checks:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: VirtusLab/scala-cli-setup@main
+        with:
+          jvm: zulu:18.0.1
+          scala-cli-version: 0.1.5
+      - run: ./run-code-checks.sh
+
